# fast_pl

./: .gitignore  Cargo.toml  README.md  afterflipint.csv  bigtest.0.csv  bigtest.csv  dsphere-2000-2.barcodes  flake.nix  problem_pair.csv  problem_pair2.csv  problem_pair3.csv  simpleBarcodes.fast_pl  simpleTest.csv  test.barcodes  test_broken.barcodes  torus-2000-0.barcodes  uniform-100-29.barcodes  uniform-2000-12.barcodes
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0vvf64zzp4vdiym3mzdz2a2rcgcb9dz5-source  g0bci9zslz2m9svr5vcrf8017pgsax0x-source  hapbgq8k7sh872y063bx035hmfcdzcv9-source  miaapfz7i7hsg9ivf3nsy3ki26kf9ck3-source
src/: barcode.rs  birthdeath.rs  lib.rs  main.rs  persistencelandscape.rs  plot.rs  rpls.rs
