[package]
name = "fast_pl"
version = "1.0.0"
edition = "2021"
description = "A plane-sweep implementation to compute persistence landscapes"
repository = "https://github.com/tph5595/fast_pl"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["tda", "data-analysis", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
csv = "1.1.6"
float-ord = "0.3.2"
geo = "0.23.0"
plotters = {version="0.3.4", optional=true}
geo-types = "0.7.8"

[features]
plot = ["dep:plotters"]
