[package]
name = "fast_pl"
version = "1.3.0"
edition = "2021"
description = "A plane-sweep implementation to compute persistence landscapes"
repository = "https://github.com/tph5595/fast_pl"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["tda", "data-analysis", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [".direnv/", "flake.nix", "flake.lock", ".envrc", ".github"]

# [profile.release]
# opt-level = 2
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
float-ord = "0.3.2"
geo = "0.29.3"
plotters = {version="0.3.7", optional=true}
geo-types = "0.7.15"

[features]
plot = ["dep:plotters"]
